--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ h1 , h2 , h3 , h4 , h5 , h6 {font-weight: bold;}
 
 /* Start Header */
 .header {
-    background:url(https://bella.design/wp-content/uploads/2016/04/OcklestonBailey-macbook-1920px.jpg) no-repeat center center fixed;
+    background:url(https://res.cloudinary.com/hapiii/image/upload/v1563446937/header_pu6n3b.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
